<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DecodeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dekodowanie"
            android:textSize="34sp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/mtInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/border"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/text_to_decode"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:lines="8"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btDecodeText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/decode" />

            <ImageButton
                android:id="@+id/ibDot"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#00000000"
                app:srcCompat="@drawable/baseline_circle_24" />

            <ImageButton
                android:id="@+id/ibPause"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#00000000"
                app:srcCompat="@drawable/baseline_minimize_24" />

            <ImageButton
                android:id="@+id/ibSpace"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#00000000"
                app:srcCompat="@drawable/baseline_space_bar_24" />

            <ImageButton
                android:id="@+id/ibClear"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#00000000"
                app:srcCompat="@drawable/ic_clear" />

            <ImageButton
                android:id="@+id/ibPaste"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#00000000"
                app:srcCompat="@drawable/ic_paste" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvDecodedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>